# axelar-examples

./: .env.example  Makefile  build-wasm.sh  hardhat.config.js
axelar-local/: init_axelar.sh  setup.sh
axelar-local/libs/: activate-chain.sh  broadcast-unsigned-multi-tx.sh  evm-rpc.toml  params.json
axelar-local/steps/: 01-add-evm-chain.sh  02-add-cosmos-chain.sh  03-register-broadcaster.sh  04-activate-evm-chain.sh  05-activate-cosmos-chain.sh  06-register-controller.sh  06-setup-keygen.sh  07-setup-keygen.sh  08-rotate-keygen.sh  09-register-gateway-ethereum.sh  register-asset.sh
examples/cosmos/call-contract/wasm-contract-neutron/: Cargo.toml
examples/cosmos/call-contract/wasm-contract-neutron/src/: contract.rs  lib.rs
examples/cosmos/smart-account/wasm-contract-neutron/: Cargo.toml
examples/cosmos/smart-account/wasm-contract-neutron/src/: contract.rs  contract_test.rs  lib.rs  msg.rs
examples/evm/mock-contract/: MockGateway.sol
examples/evm/smart-account/: Account.sol  AccountWithoutSignature.sol  EntryPoint.sol  EntryPointWithoutSignature.sol  README.md  SignatureVerifier.sol  index.js
scripts/: deploy.js  query.js
test/smart-account/: entryPoint.test.js  signatureVerifier.test.js
