[package]
name = "smart-account"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = "2.1.0"
cosmwasm-std = "2.1.0"
cw-storage-plus = "2.0.0"
cw2 = "1.0.1"
ethabi = { version = "18.0.0", default-features = false, features = [] }
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
serde-json-wasm = "0.5.1"
cw-utils = "2.0.0"
neutron-sdk = "0.11.0"

[dev-dependencies]
cw-multi-test = "0.16.2"
